Import of DSUGAL/VMS-Device-0_02 from CPAN.
gitpan-cpan-distribution: VMS-Device
gitpan-cpan-version:      0_02
gitpan-cpan-path:         DSUGAL/VMS-Device-0_02.zip
gitpan-cpan-author:       DSUGAL
gitpan-cpan-maturity:     released

--- a/changes
+++ b/changes
@@ -14,3 +14,11 @@ Revision history for Perl extension VMS::Device.
     - Changed device_list--no special hash. Now just takes two extra
       parameters.
     - Added device_classes and device_types functions. 
+
+0.02  Wed May 27 17:03:32 1998
+    - Added allocate and deallocate functions. Keen!
+
+0.02  Thu May 28 11:32:34 1998
+    - Fixed the example for total free blocks
+    - #ifdef'd all the device types and classes. (Yay, perl! :) Should
+      function much better on non-alpha non-7.1 systems.
