Import of DSUGAL/VMS-Device-0_06 from CPAN.
gitpan-cpan-distribution: VMS-Device
gitpan-cpan-version:      0_06
gitpan-cpan-path:         DSUGAL/VMS-Device-0_06.zip
gitpan-cpan-author:       DSUGAL
gitpan-cpan-maturity:     released

--- a/device/changes
+++ b/device/changes
@@ -37,3 +37,7 @@ Revision history for Perl extension VMS::Device.
       working. Now module's completely implemented, though error checking
       and the like could stand to be beefed up. (Docs are still lousy too,
       alas)
+
+0.06  Thu Mar 11 14:18:23
+    - Fixed a boneheaded error in decode_device_bitmaps. (& is bitwise and,
+      not &&. Bloody C...)
